# orun

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  justfile  pyproject.toml
.github/workflows/: publish.yml
data/consensus/: best_of_three.json  code_review.json  iterative_improve.json  multi_expert.json  research_paper.json  vision_code.json  vision_consensus.json
data/profiles/: analyst.json  coder.json  concise.json  reviewer.json  system.json  tutor.json  writer.json
data/prompts/: agility_story.md  analyst.md  analyze_answers.md  analyze_bill_short.md  analyze_comments.md  analyze_debate.md  analyze_email_headers.md  analyze_incident.md  analyze_interviewer_techniques.md  analyze_malware.md  analyze_mistakes.md  analyze_paper.md  analyze_paper_simple.md  analyze_patent.md  analyze_personality.md  analyze_presentation.md  analyze_proposition.md  analyze_prose.md  analyze_prose_json.md  analyze_prose_pinker.md  analyze_sales_call.md  analyze_terraform_plan.md  analyze_threat_report.md  analyze_threat_report_cmds.md  analyze_threat_report_trends.md  apply_ul_tags.md  ask_secure_by_design_questions.md  ask_uncle_duke.md  coder.md  concall_summary.md  concise.md  create_art_prompt.md  create_better_frame.md  create_coding_feature.md  create_conceptmap.md  create_cyber_summary.md  create_design_document.md  create_diy.md  create_excalidraw_visualization.md  create_flash_cards.md  (+81 more)
scripts/: README.md  git_commit_release.py  version_manager.py
src/orun/: __init__.py  cache.py  db.py  (+18 more)
tests/: conftest.py  test_consensus.py  test_consensus_parallel.py  test_core.py  test_db.py  test_fetch_url.py  test_http_client.py  test_main.py  test_parallel_consensus.py  test_tools.py  test_tools_fetch_url.py  test_tools_http.py
