[project]
name = "orun-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.6.1",
]

[project.scripts]
orun = "orun.main:main"

[project.urls]
Homepage = "https://github.com/CBoYXD/orun"
Repository = "https://github.com/CBoYXD/orun"
Issues = "https://github.com/CBoYXD/orun/issues"
Documentation = "https://github.com/CBoYXD/orun/blob/main/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orun"]
