[project]
name = "orun-py"
version = "1.2.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.6.1",
    "peewee>=3.18",
    "rich>=14.2.0",
    "textual>=0.70.0",
    "arxiv>=2.3.1",
    "google-api-python-client>=2.187.0",
    "duckduckgo-search>=8.1.1",
    "pillow>=12.0.0",
    "pyperclip>=1.11.0",
]

[project.scripts]
orun = "orun.main:main"

[project.urls]
Homepage = "https://github.com/CBoYXD/orun"
Repository = "https://github.com/CBoYXD/orun"
Issues = "https://github.com/CBoYXD/orun/issues"
Documentation = "https://github.com/CBoYXD/orun/blob/main/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orun"]

[tool.hatch.build.targets.wheel.force-include]
"data/prompts" = "orun/data/prompts"
"data/strategies" = "orun/data/strategies"

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "data",
    "pyproject.toml",
    "justfile",
    "uv.lock",
]
